--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -73,7 +73,7 @@ runs:
       id: create_pr
       if: env.check_changes == 'true'
       run: |
-        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.github-token }}" \
+        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
           -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
