--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           java-version: 17
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      # - name: Grant execute permission for gradlew
+      #   run: chmod +x gradlew
 
       - name: Run Module Coverage
         run: ./gradlew debugCoverage --continue
