--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -73,7 +73,7 @@ runs:
       id: create_pr
       if: env.check_changes == 'true'
       run: |
-        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
+        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.github-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
           -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
@@ -82,16 +82,22 @@ runs:
         echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
       shell: bash
 
-    - name: Add Empty Commit
+    - name: Add Empty Commit to Auto-Created PR
+      if: env.PR_NUMBER
       run: |
+        # Checkout the branch associated with the PR
+        git checkout feature-branch
+
+        # Set user information for the empty commit
+        git config user.name "hiteshkuberr"
+        git config user.email "hiteshkuberr@gmail.com"
+
         # Add an empty commit
         git commit --allow-empty -m "Add empty commit to trigger actions"
 
-        # Push the changes to the new branch
+        # Push the changes to the existing branch
         git push origin feature-branch
       shell: bash
-      env:
-        GITHUB_TOKEN: ${{ steps.my-app.outputs.token }}
             
     - name: Approve PR
       if: ${{ env.PR_NUMBER }}
