--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -173,3 +173,10 @@ jobs:
         run: |
           echo "output: ${{ steps.auto-merge.outputs.success }}"
 
+      - name: Delete branch
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
+        run: |
+          git push origin --delete github-actions/readme-update
+
