--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -163,8 +163,7 @@ jobs:
           env.version_change == 'true' ||
           env.VERSION_LINE_CHANGED == 'true'
         run: >
-          gh pr merge --squash --auto 
-          --repo ${{ github.repository }} --delete-branch
+          gh pr merge --squash --repo ${{ github.repository }} --delete-branch
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
           GITHUB_TOKEN: ${{ env.ALTERNATE_APP_TOKEN }}
@@ -173,10 +172,10 @@ jobs:
         run: |
           echo "output: ${{ steps.auto-merge.outputs.success }}"
 
-      # - name: Delete branch
-      #   if: |
-      #     env.version_change == 'true' ||
-      #     env.VERSION_LINE_CHANGED == 'true'
-      #   run: |
-      #     git push origin --delete github-actions/readme-update
+      - name: Delete branch
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
+        run: |
+          git push origin --delete github-actions/readme-update
 
