--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Update Badge
         run: |
           # Replace the coverage percentage
-          new_percentage="${{ env.NEW }}"  # Replace with your desired percentage
+          new_percentage=35.67  # Replace with your desired percentage
 
           # Compare old and new percentages
           old_percentage="${{ env.OLD }}"
