--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -163,7 +163,8 @@ jobs:
           env.version_change == 'true' ||
           env.VERSION_LINE_CHANGED == 'true'
         run: >
-          gh pr merge --squash --repo ${{ github.repository }} --delete-branch
+          gh pr merge --squash --auto --repo
+          ${{ github.repository }} --delete-branch
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
           GITHUB_TOKEN: ${{ env.ALTERNATE_APP_TOKEN }}
