--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
 
-VERSION_NAME=2.1-beta
+VERSION_NAME=2.1-bet
