--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -167,7 +167,7 @@ jobs:
           ${{ github.repository }} --delete-branch
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
-          GITHUB_TOKEN: ${{ env.ALTERNATE_APP_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print output of auto merge
         run: |
@@ -179,6 +179,8 @@ jobs:
           env.VERSION_LINE_CHANGED == 'true'
         run: gh api -X GET /repos/${{ github.repository }}/commits/${{ github.sha }}/check-runs --silent
         id: wait-for-checks
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Delete branch
         if: |
