--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -128,7 +128,7 @@ jobs:
           title: 'Update readme'
           body: ${{ env.COMMIT_MESSAGE }}
           commit-message: ${{ env.COMMIT_MESSAGE }}
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ env.APP_TOKEN }}
           add-paths: README.md
             
       - name: pr number
