--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -119,3 +119,26 @@ runs:
       shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
+
+    - name: Wait for checks to complete
+      if: ${{ env.PR_NUMBER }}
+      run: |
+        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
+
+        while [ "$pr_checks_status" != "success" ] && [ "$pr_checks_status" != "failure" ]; do
+          sleep 20
+          pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
+        done
+
+        if [ "$pr_checks_status" == "success" ]; then
+          echo "PR checks passed. Deleting branch."
+          git push origin --delete feature-branch
+        else
+          echo "PR checks failed. Keeping the branch."
+        fi
+
+
