--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -123,13 +123,13 @@ runs:
     - name: Wait for checks to complete
       if: ${{ env.PR_NUMBER }}
       run: |
-        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.github-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
 
         while [ "$pr_checks_status" != "success" ] && [ "$pr_checks_status" != "failure" ]; do
           sleep 20
-          pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.github-token }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
         done
@@ -140,5 +140,6 @@ runs:
         else
           echo "PR checks failed. Keeping the branch."
         fi
+      shell: bash
 
 
