--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -123,17 +123,20 @@ runs:
     - name: Wait for checks to complete
       if: ${{ env.PR_NUMBER }}
       run: |
-        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.github-token }}" \
+        echo "pr number: ${{ env.PR_NUMBER }}"
+        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
         echo "status: $pr_checks_status"
 
         while [ "$pr_checks_status" != "success" ] && [ "$pr_checks_status" != "failure" ]; do
           sleep 5
-          pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.github-token }}" \
+          pr_checks_status_api=$(curl -s -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
-            echo "status: $pr_checks_status"
+            https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status)
+          echo "API Response: $pr_checks_status_api"
+          pr_checks_status=$(echo "$pr_checks_status_api" | jq -r '.state')
+          echo "PR Checks Status: $pr_checks_status"
         done
 
         if [ "$pr_checks_status" == "success" ]; then
