--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -124,14 +124,14 @@ runs:
       if: ${{ env.PR_NUMBER }}
       run: |
         echo "pr number: ${{ env.PR_NUMBER }}"
-        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
+        pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
         echo "status: $pr_checks_status"
 
         while [ "$pr_checks_status" != "success" ] && [ "$pr_checks_status" != "failure" ]; do
           sleep 5
-          pr_checks_status_api=$(curl -s -H "Authorization: Bearer ${{ steps.my-app.outputs.token }}" \
+          pr_checks_status_api=$(curl -s -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status)
           echo "API Response: $pr_checks_status_api"
